sample/retrieveUnpackaged/objects/Program_Engagement__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Contact for program engagement.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Engagement</relationshipLabel>
        <relationshipName>Program_Engagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relate_to_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relate to Program</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Program Engagement</relationshipLabel>
        <relationshipName>Program_Engagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Or_Corporate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stakeholder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Engagement</relationshipLabel>
        <relationshipName>Program_Engagement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Program Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Engagement Activity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Engagement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>